<resources>
    <string name="App_version">"0.9.7.1"</string>
    <string name="app_name">Temprecord</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Bluetooth Connected</string>
    <string name="disconnected">Bluetooth Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="overview_temperature">Temperature (°C)</string>
    <string name="title_activity_basic_ble">BasicBLEActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_graph">activity_graph</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Percentage"> %</string>
    <string name="LIST_NAME">NAME</string>
    <string name="LIST_UUID">UUID</string>
    <string name="Read_S">Read Selected</string>
    <string name="Query_S">Query Selected</string>
    <string name="Parameters_S">Parameters Selected</string>
    <string name="Tag_S">Tag Selected</string>
    <string name="Start_S">Start Selected</string>
    <string name="Stop_S">Stop Selected</string>
    <string name="Reuse_S">Re-Use Selected</string>
    <string name="Help_S">Help Selected</string>
    <string name="Find_S">Find Logger Selected</string>
    <string name="Settings_S">Settings Selected</string>
    <string name="soon">This functionality is coming soon</string>
    <string name="nextversion">Will be available in version 2 of the application.
    See the gallery for saved screenshots</string>
    <string name="files">Saved Files</string>
    <string name="pdf_options">PDF Options</string>
    <string name="Not_available_with_USB">Unavailable while USB is connected</string>
    <string name="Invalid_for_device">Invalid for this Device</string>
    <string name="BLE_Active">BLE_Active</string>
    <string name="USB_Active">USB_Active</string>
    <string name="Inactive">Inactive</string>
    <string name="Searching_Device">Searching Devices…</string>
    <string name="Connecting">Connecting…</string>
    <string name="Available_Devices">Available Devices</string>
    <string name="Retry_connecting">Retry connecting</string>
    <string name="Timedout">Timed Out</string>
    <string name="LoggerDetails">Logger Details</string>
    <string name="LoggerFamily">Logger Family :</string>
    <string name="LoggerModel">Model :</string>
    <string name="LoggerState">Logger State :</string>
    <string name="LoggerFirmware">Firmware Version : </string>
    <string name="Estimated_Battery">Battery : </string>
    <string name="LoggerSerialNo">Serial No. : </string>
    <string name="LoggerMemory">Memory Size :</string>
    <string name="LoggerManDate">Manufacture Date : </string>
    <string name="TotalSamples">Total Samples : </string>
    <string name="TotalTrips">Total Trips : </string>
    <string name="BLEEnergySave">Bluetooth Energy Save : </string>
    <string name="TripInfo">Trip Info.</string>
    <string name="Logging">Logging :</string>
    <string name="LoggerUnits">Logger Units :</string>
    <string name="StartDelay">Start Delay : </string>
    <string name="SamplePeriod">Sample Period : </string>
    <string name="TripSample">Trip Samples : </string>
    <string name="LoggedSample">Recorded Samples : </string>
    <string name="StartedAt">Started at : </string>
    <string name="StartedBy">Started by : </string>
    <string name="StoppedAt">Stopped at : </string>
    <string name="StoppedBy">Stopped by : </string>
    <string name="FirstSample">First Sample : </string>
    <string name="LastSample">Last Sample : </string>
    <string name="StartwithButton">Start with Button : </string>
    <string name="StartonDateTime">Start on Date Time : </string>
    <string name="LoopOverwrite">Loop Overwrite : </string>
    <string name="AllowPlacingTag">Allow placing Tags : </string>
    <string name="ReuseWithButton">Re-Use with Button : </string>
    <string name="PaswordProtected">Password Protected : </string>
    <string name="StopWithButton">Stop with Button : </string>
    <string name="StoponDateTime">Stop on Date Time : </string>
    <string name="StoponSample">Stop on Sample : </string>
    <string name="StopWhenFull">Stop when Full : </string>
    <string name="EnableLCDMenu">Enable LCD Menu : </string>
    <string name="ExtendLCDMenu">Extended LCD Menu : </string>
    <string name="ChannelInfo">Sensors Info.</string>
    <string name="Channel1">Channel 1 :</string>
    <string name="Enabled">Enabled : </string>
    <string name="EnableLimits">Enable Limits : </string>
    <string name="AlarmDelay">Alarm Delay : </string>
    <string name="UpperLimit">Preset upper Limit : </string>
    <string name="LowerLimit">Preset lower Limit : </string>
    <string name="Channel2">Channel 2 :</string>
    <string name="UserComments">Comments</string>
    <string name="UserComments_">User Comments :</string>
    <string name="QueryLogger">Query</string>
    <string name="QueryingLogger">Querying Logger</string>
    <string name="Abort">Abort</string>
    <string name="Screenshot">Screenshot</string>
    <string name="PDF">P</string>
    <string name="QueryAborted">Query Aborted</string>
    <string name="StartLogger">Start Logger</string>
    <string name="StopLogger">Stop Logger</string>
    <string name="ReuseLogger">Re-Use Logger</string>
    <string name="TagLogger">Tag Logger</string>
    <string name="SearchLogger">Search Logger</string>
    <string name="ReadLogger">Read</string>
    <string name="Start">Start</string>
    <string name="StartSuccessfull">The Logger has started successfully.</string>
    <string name="StartNotSuccessfull">Start not successful.

The logger is either running or is in stopped state</string>
    <string name="Stop">Stop</string>
    <string name="StopSuccessfull">The Logger has stopped successfully.</string>
    <string name="StopNotSuccessfull">Stop not successful.

The logger is either in wrong state or password protected</string>
    <string name="Reuse">Re-Use</string>
    <string name="ReuseSuccessfull">The Logger has been successfully re-used.</string>
    <string name="ReuseNotSuccessfull">Re-use unsuccessful.

Try stopping the logger first</string>
    <string name="FindLogger">Find Logger</string>
    <string name="FindSuccessfull">Green LED should be blinking on the logger now.</string>
    <string name="FindNotSuccessfull">An error occurred</string>
    <string name="Tag">Re-Use</string>
    <string name="TagSuccessfull">The Logger has been successfully tagged.</string>
    <string name="TagNotSuccessfull">Tagging unsuccessful.

Try starting the logger first</string>
    <string name="Not_Available_in_Current_State">Can\'t use this functionality in the current state</string>
    <string name="Go_back_and_reconnect">Entries might be empty!
Go back to menu and reconnect</string>
    <string name="TempHum">Temperature + Humidity</string>
    <string name="Temp">Temperature</string>
    <string name="Hum">Humidity</string>
    <string name="Samples">  Samples</string>
    <string name="USB_Connected">USB Connected</string>
    <string name="TotalLoggedTime">Total Logged Time : </string>
    <string name="LoggedTags">Logged Tags : </string>
    <string name="FirstLoggedSample">First Logged Sample : </string>
    <string name="LastSampleTaken">Last Sample Taken : </string>
    <string name="LastLoggedSample">Last Logged Sample : </string>
    <string name="TemperatureGraph">Temperature Graph</string>
    <string name="Graph">Graph</string>
    <string name="Channel1Stats">Temperature Stats</string>
    <string name="Channel2Stats">Humidity Stats</string>
    <string name="Mean">Mean Value : </string>
    <string name="MKT">MKT Value : </string>
    <string name="MAX">Max Recorded : </string>
    <string name="Min">Min Recorded : </string>
    <string name="TotalSamplewithinLimits">Total Samples within Limits : </string>
    <string name="TotalTimewithinLimits">Total Time within Limits : </string>
    <string name="TotalPercentagewithinLimits">Total Percentage within Limits : </string>
    <string name="TotalSamplesoutofLimits">Total Samples out of Limits : </string>
    <string name="TotalTimeoutofLimits">Total Time out of Limits : </string>
    <string name="TotalPercentageoutofLimits">Total Percentage out of Limits : </string>
    <string name="SamplesaboveUpperLimits">Samples above upper Limit : </string>
    <string name="TimeaboveUpperLimit">Time above Upper Limit : </string>
    <string name="PercentageaboveUpperLimit">Percentage above Upper Limit : </string>
    <string name="SamplesbelowLowerLimits">Samples below Lower Limit : </string>
    <string name="TimebelowLowerLimit">Time below Lower Limit : </string>
    <string name="PercentagebelowLowerLimit">Percentage below Lower Limit : </string>
    <string name="HumidityGraph">Humidity Graph</string>
    <string name="ReadAbort">Read Abort</string>
    <string name="GeneralSettings">General</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Enables">Enables</string>
    <string name="BLEenegySave">Bluetooth energy save</string>
    <string name="LoopOver_Write">Loop Overwrite</string>
    <string name="ExtendedLCDMenu">Extended LCD Menu</string>
    <string name="StartwB">Start with Button</string>
    <string name="StopwithButton">Stop with Button</string>
    <string name="ReusewithButton">Re-Use with Button</string>
    <string name="AllowplacingTags">Allow Tags</string>
    <string name="EnableLCD_Menu">Enable LCD Menu</string>
    <string name="SecureloggerwithPassword">Secure logger</string>
    <string name="Password">Password</string>
    <string name="Confirm">Confirm</string>
    <string name="BluetoothName">Bluetooth Name</string>
    <string name="StartStopandSampleSettings">Start, Stop and Sample</string>
    <string name="StartOptions">Start Options</string>
    <string name="StartwithDelay">Start with Delay</string>
    <string name="Starton_DateTime">Start on date time (24h)</string>
    <string name="Sample_Period">Sample Period</string>
    <string name="Sample_Period_">Sample Period :</string>
    <string name="StopOptions">Stop Options</string>
    <string name="RequiresstopbyUser">Requires stop by User</string>
    <string name="StopwhenFull">Stop when Full</string>
    <string name="Stopon_Sample">Stop on Sample</string>
    <string name="Stopon_DateTime">Stop on Date Time (24h)</string>
    <string name="ChannelSettings">Sensor Limits</string>
    <string name="Channel1Temperature">Channel 1: Temperature</string>
    <string name="ProgramParameters">Program</string>
    <string name="About">About</string>
    <string name="Options">Options</string>
    <string name="ProgramandStart">Program and Start</string>
    <string name="LoadPrevious">Load Last Read Parameters</string>
    <string name="ReQuery">Re-Query Logger</string>
    <string name="Sound">Sound</string>
    <string name="Sound_Enabled">Sound Enabled</string>
    <string name="App_Units">App Units</string>
    <string name="Metric_Units">Metric Units</string>
    <string name="PDF_values">PDF Values</string>
    <string name="value_column">One Value Across Page</string>
    <string name="simple_PDF">"Simple PDF"</string>
</resources>