<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/Abort"
        android:icon="@drawable/ic_screenshotb"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu"
        android:title="@string/Options"
        android:icon="@drawable/query_option"
        android:orderInCategory="101"
        android:showAsAction="always">

        <menu>


            <item android:id="@+id/action_program"
                android:icon="@drawable/ic_done_black_24dp"
                android:showAsAction="ifRoom"
                android:title="@string/ProgramParameters" />

            <item android:id="@+id/action_p_and_s"
                android:icon="@drawable/ic_startb"
                android:showAsAction="ifRoom"
                android:title="@string/ProgramandStart" />

            <item android:id="@+id/action_load_previous"
                android:icon="@drawable/ic_backup"
                android:showAsAction="ifRoom"
                android:title="@string/LoadPrevious" />

        </menu>

    </item>

</menu>