<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/chat_name_color"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/layout_txtbg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:text="@string/Sound"
            android:textColorHighlight="@color/ublox_blue_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingTop="3dp"
            android:background="@android:color/darker_gray"/>


        <Switch
            android:id="@+id/sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/Sound_Enabled"
            android:thumbTint="@color/ublox_blue_color" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/layout_txtbg"
        android:orientation="vertical">




        <TextView
            android:id="@+id/info19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:text="@string/App_Units"
            android:textColorHighlight="@color/ublox_blue_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingTop="3dp"
            android:background="@android:color/darker_gray"/>


        <Switch
            android:id="@+id/imperial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/Metric_Units"
            android:thumbTint="@color/ublox_blue_color" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/layout_txtbg"
        android:orientation="vertical">




        <TextView
            android:id="@+id/info32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:text="@string/PDF_values"
            android:textColorHighlight="@color/ublox_blue_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingTop="3dp"
            android:background="@android:color/darker_gray"/>


        <Switch
            android:id="@+id/pdf_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/value_column"
            android:thumbTint="@color/ublox_blue_color" />




    </LinearLayout>



</LinearLayout>
